--- a/Conclusion/Conclusion.tex
+++ b/Conclusion/Conclusion.tex
@@ -6,7 +6,7 @@ is the search for \ac{BSM} Higgs bosons with tau leptons in the final state.
 
 The search for a heavy Higgs boson decaying to a final state of $\Pbottom\Pbottom\Pgt\Pgt$ via two
 $125\,\GeV$ Higgs bosons was performed using $19.7\,\invfb$ of data collected at a
-centre-of mass energy of $8\,\TeV$ during the 2012 \ac{LHC} data-taking period. Such a final
+centre-of-mass energy of $8\,\TeV$ during the 2012 \ac{LHC} data-taking period. Such a final
 state can access areas of the \ac{MSSM} parameter space not easily accessible via other channels.
 To separate more signal-like and more background-like events, a categorisation based on the number of 
 b-tagged jets is used. To further increase the sensitivity to the signal, cuts on the di-tau and di-jet
@@ -75,7 +75,7 @@ projected to integrated luminosities of $300\,\invfb$ (blue) and $3000\,\invfb$ 
 under several assumptions of how the systematic uncertainties scale. In scenario ``S1''
 all systematic uncertainties are kept constant with integrated luminosity, while in scenario ``S2'' 
 the theoretial uncertainties are scaled down by a factor $\frac{1}{2}$ and experimental
-systematic uncertainties scale down by the square root of the integrated luminosity until they reach
+systematic uncertainties scaled down by the square root of the integrated luminosity until they reach
 a lower limit. In the ``Stat. Only'' scenario all systematic uncertainties are neglected. Even with an integrated 
 luminosity of $3000\,\invfb$ it is not possible to exclude the entire \mA-\tanb~plane
 in this \ac{MSSM} benchmark scenario using this analysis alone \cite{HTT-projection}.}
