--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -223,8 +223,8 @@ This part of the system provides up to nine $\phi$ measurements.
 Some of the strip modules in the detector carry a second strip detector module mounted back-to-back with a stereo angle %FIXME WTF?
 of $100\,$mrad, in order to provide measurements of the \mbox{$z$ coordinate} in the barrel. This is achieved with a resolution of $230$--$530\,\micron$.
 
-The pixel tracker will be upgraded during the extended year-end technical stop in late 2016-early 2017. This upgrade is needed to
-maintain the performance of the tracker as the pileup increases over the next few years \cite{cms-pixel-upgrade}. %or just replaced?
+The pixel tracker was upgraded during the extended year-end technical stop in late 2016-early 2017. This upgrade was needed to
+maintain the performance of the tracker as the pileup increases throughout the remainder of Run 2 \cite{cms-pixel-upgrade}. %or just replaced?
 
 \subsection{Electromagnetic calorimeter}
 \label{sec:CMSLHC_CMS_ecal}
@@ -304,7 +304,8 @@ where $S$ is the stochastic term, $N$ the noise term and $C$ the constant term.
 The stochastic term arises from fluctuations in lateral shower containment and 
 fluctuations in the scintillation yield, the noise term is due to noise from the electronics
 and additional particles in the event, and the constant term comes
-from calibration errors and the non-uniformity of the longitudinal response.
+from crystal-to-crystal intercalibration errors, the non-uniformity of the longitudinal response and 
+energy leakage from the back of the crystals.
 
 The values of $S$, $N$ and $C$ have been measured in an electron
 test-beam, without a magnetic field or material in front of the \ac{ECAL}, as 
@@ -479,7 +480,7 @@ An overview of the data flow in the \ac{L1} trigger is given in figure \ref{fig:
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.7\textwidth]{./Detector/Plots/CMSTrigger.png}
+\includegraphics[width=\textwidth]{./Detector/Plots/CMSTrigger.png}
 \caption[Schematic of the different components of the L1 trigger.]{Schematic of the different components of the \ac{L1} trigger \cite{cms-trigger-tdr}.}
 \label{fig:CMS_Trigger}
 \end{center}
