--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -355,15 +355,15 @@ are collected studies at the \acs{LHC} will continue to test the compatibility o
 \section{Beyond the standard model}
 \label{sec:theory_BSM}
 The \ac{SM} has been successfully tested to high accuracy \cite{pdg-2014}. However,
-some issues remain that cannot be addressed by the \ac{SM} alone \cite{griffiths}.
+some issues remain that cannot be addressed by the \ac{SM} alone.
 For example, it does not provide a candidate for dark matter, which is estimated
-to make up 25\% of the matter-energy density in the universe.
+to make up 25\% of the matter-energy density in the universe \cite{Bertone:2004pz}.
 In addition, the running coupling constants of the electroweak and
-strong forces do not intersect at a common energy scale. Another problem is that the force
-of gravity does not appear in the \ac{SM}.
+strong forces do not intersect at a common energy scale \cite{GUT-LEP}. Another problem is that the force
+of gravity does not appear in the \ac{SM} \cite{Carlip:2001wq}.
 
 These points aside, the most important issue concerning
-the Higgs sector of the \ac{SM} is the hierarchy problem.
+the Higgs sector of the \ac{SM} is the hierarchy problem \cite{SUSY-primer}.
 The \ac{SM}
 is accepted to be an effective field theory that describes
 the elementary particles and their interactions well, up to an energy scale $\Lambda$ beyond which it breaks down.
@@ -377,8 +377,8 @@ the corrections due to fermion and boson loops to the Higgs boson mass quadratic
 &\Delta M_{\PHiggs}^2 \sim \mathcal{O}(\Lambda^2).
 \end{split}
 \end{equation}
-Thus assuming that there is no new physics all the way up to
-the Planck scale the observation $M_{\PHiggs}=125\,\GeV$ would only be compatible with $\Lambda$ of order $10^{19}\,\GeV$
+Thus, assuming that there is no new physics all the way up to
+the Planck scale, the observation $M_{\PHiggs}=125\,\GeV$ would only be compatible with $\Lambda$ of order $10^{19}\,\GeV$
 if there was extreme fine-tuning of the bare Higgs boson mass $(M_{\PHiggs})_0^2$.
 
 Many \acf{BSM} theories that can address the hierarchy problem, and some of
