--- a/backmatter.tex
+++ b/backmatter.tex
@@ -70,6 +70,15 @@
 
 \appendix
 \renewcommand{\chaptername}{Appendix}
+\chapter{\texorpdfstring{Event yields in the \Htohhtobbtautau analysis}{Event yields in the H to hh to bbtautau analysis}}
+\label{appendix:yields_bbtautau}
+The numbers of observed and expected events in the \Htohhtobbtautau analysis \mbox{(chapter \ref{chap:hhh})}
+are given in table \ref{tab:hhh_mt_yields} for the \mutau channel and in table \ref{tab:hhh_et_yields} for the \etau channel. The background
+expectations are given after the fit to data has been performed. The uncertainties also correspond
+to the values obtained after performing the fit to data, with the correlations between the different
+systematic uncertainties taken into account. 
+\input{Hhh/Hhhyields}
+
 \chapter{\texorpdfstring{Systematic uncertainties in the MSSM \AHtotautau analysis}{Overview of systematic uncertainties in the MSSM A/H to tautau analysis}}
 \label{appendix:uncerts}
 An overview of the systematic uncertainties that are applied in the MSSM \AHtotautau analysis (chapter \ref{chap:mssm})
@@ -96,6 +105,18 @@ The di-boson and single-top backgrounds are denoted `VV', with
 `VVT' and `VVJ' indicating the di-boson plus single-top background with real hadronic taus
 and without real hadronic taus, respectively. The QCD multijet background is denoted `QCD'.
 \input{MSSM/UncOv}
+
+\chapter{\texorpdfstring{Event yields in the MSSM \AHtotautau analysis}{Event yields in the MSSM A/H to tautau analysis}}
+\label{appendix:yields_mssm}
+The numbers of observed and expected events in the MSSM \AHtotautau analysis \mbox{(chapter \ref{chap:mssm})}
+are given in table \ref{tab:mssm_mt_yields} for the \mutau channel, in table \ref{tab:mssm_et_yields} for the 
+\etau channel, in table \ref{tab:mssm_tt_yields} for the \tautau channel 
+and in table \ref{tab:mssm_em_yields} for the \emu channel. The background
+expectations are given after the fit to data has been performed. The uncertainties also correspond
+to the values obtained after performing the fit to data, with the correlations between the different
+systematic uncertainties taken into account. 
+\input{MSSM/MSSMyields}
+
 
 
 
