--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -41,6 +41,7 @@ a two Higgs doublet model.
 
 % Declaration
 \begin{declaration}
+\small
   I declare that the work in this thesis is mine. Figures and results taken from other sources
 include the appropriate reference in the text or figure caption. Figures labelled `CMS' are sourced
 directly from CMS publications. The `CMS Preliminary' label indicates figures which
@@ -53,7 +54,8 @@ used within the CMS collaboration which underpin my own work described in later 
 The work for the \Htohhtobbtautau and \AHtotautau analyses presented in chapters~\ref{chap:hhh} and \ref{chap:mssm} was 
 carried out as part of the CMS \Htotautau working group, and in collaboration with other members of the group.
 For the results of the \Htohhtobbtautau analysis I contributed to the data analysis of the \etau and \mutau
-final states of the di-tau pair. I 
+final states of the di-tau pair, with studies of alternative \ttbar background rejection methods and
+other uses of the kinematic fit variable. These studies are not further discussed in this thesis. I 
 was responsible for the statistical inference of the analyses in the \etau, \mutau and \tautau final states
 of the di-tau pair. This included
 the interpretation of the results in MSSM and 2HDM benchmark scenarios. The 
