--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,48 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-05-08 14:07:55 +0200 
+%% Created for Adinda de Wit at 2017-05-21 11:43:41 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Carlip:2001wq,
+	Archiveprefix = {arXiv},
+	Author = {Carlip, Steven},
+	Date-Added = {2017-05-21 08:55:52 +0000},
+	Date-Modified = {2017-05-21 08:55:58 +0000},
+	Doi = {10.1088/0034-4885/64/8/301},
+	Eprint = {gr-qc/0108040},
+	Journal = {Rept. Prog. Phys.},
+	Keywords = {BSM},
+	Pages = {885},
+	Primaryclass = {gr-qc},
+	Reportnumber = {UCD-2001-04},
+	Slaccitation = {%%CITATION = GR-QC/0108040;%%},
+	Title = {{Quantum gravity: A Progress report}},
+	Volume = {64},
+	Year = {2001},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0034-4885/64/8/301}}
+
+@article{Bertone:2004pz,
+	Archiveprefix = {arXiv},
+	Author = {Bertone, Gianfranco and Hooper, Dan and Silk, Joseph},
+	Date-Added = {2017-05-21 08:24:16 +0000},
+	Date-Modified = {2017-05-21 08:55:44 +0000},
+	Doi = {10.1016/j.physrep.2004.08.031},
+	Eprint = {hep-ph/0404175},
+	Journal = {Phys. Rept.},
+	Keywords = {BSM},
+	Pages = {279-390},
+	Primaryclass = {hep-ph},
+	Reportnumber = {FERMILAB-PUB-04-047-A},
+	Slaccitation = {%%CITATION = HEP-PH/0404175;%%},
+	Title = {{Particle dark matter: Evidence, candidates and constraints}},
+	Volume = {405},
+	Year = {2005},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.physrep.2004.08.031}}
 
 @article{YR3,
 	Author = {{The LHC Higgs Cross Section Working Group}},
